[VISUAL] -> Score section header is spacing is tighter as well as fixed the wrapping of paragraph

--- a/src/section/scores_section/scoreSection.css
+++ b/src/section/scores_section/scoreSection.css
@@ -3,35 +3,31 @@
   border-radius: 68px;
   background: linear-gradient(-25.39deg, rgba(255, 255, 255, 0.024) 18.54%, rgba(123, 245, 93, 0.108) 62.25%);
   padding: 20px;
-  backdrop-filter: blur(100px);
 }
 
 .gradient-border::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   border-radius: 68px;
-  padding: 2px; /* adjust for border thickness */
+  padding: 1.2px; /* adjust for border thickness */
   background: radial-gradient(
     65.6% 145.73% at 90.52% 2.09%,
     rgba(255, 255, 255, 0.3) 2.08%,
     rgba(255, 255, 255, 0) 53.65%,
-    rgba(123, 245, 93, 0.135) 100%
+    rgba(124, 245, 93, 0.048) 100%
   );
-  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#000000 0 0);
   -webkit-mask-composite: xor;
   mask-composite: exclude;
   pointer-events: none;
 }
 
 .green_glow--shadow {
-  text-shadow: 0px 0px 61px #53fb2a, 0px 0px 42px #e9e11f, 0px 0px 12px #53fb2a;
+  text-shadow: 0px 0px 100px #53fb2a, 0px 0px 42px #e9e11f, 0px 0px 30px #53fb2a;
 }
 
-@keyframes blink {
+/* @keyframes blink {
   0%,
   100% {
     opacity: 1;
@@ -110,4 +106,4 @@
 }
 .spin-duration-15 {
   animation-duration: 15s;
-}
+} */
